<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match">

    <LinearLayout
        style="@style/Match"
        android:orientation="vertical"
        android:padding="@dimen/base_margin">

        <TextView
            style="@style/Venues.Text.Title"
            android:layout_marginBottom="@dimen/venues_block_spacing_bottom"
            android:text="@string/venue_hotel_name" />

        <LinearLayout style="@style/Venue.Label.Layout">

            <TextView
                style="@style/Venues.Text.Label.Type"
                android:text="@string/venue_address" />

            <TextView
                style="@style/Venues.Text.Label"
                android:layout_width="wrap_content"
                android:text="@string/venue_hotel_address" />

            <ImageView
                android:id="@+id/venue_address_button"
                style="@style/Venues.Label.Button" />
        </LinearLayout>

        <LinearLayout style="@style/Venue.Label.Layout">

            <TextView
                style="@style/Venues.Text.Label.Type"
                android:text="@string/venue_website" />

            <TextView
                android:id="@+id/venue_web_page_link"
                style="@style/Venues.Text.Label.Link"
                android:text="@string/venue_hotel_web" />

        </LinearLayout>

        <LinearLayout style="@style/Venue.Label.Layout"
            android:layout_marginBottom="@dimen/venues_block_spacing_bottom">

            <TextView
                style="@style/Venues.Text.Label.Type"
                android:text="@string/venue_reservation" />

            <TextView
                android:id="@+id/venue_email_link"
                style="@style/Venues.Text.Label.Link"
                android:text="@string/venue_hotel_email" />

        </LinearLayout>

        <TextView
            style="@style/Venues.Text"
            android:text="@string/venue_hotel_description" />

    </LinearLayout>
</ScrollView>